# LeanRW

./: .gitmodules  Cargo.toml
src/: main.rs
src/extraction/: conversion.rs  extraction.rs  mod.rs
src/lean/: language.rs  mod.rs  to_lean.rs
src/rewrites/: generic.rs
